chore: ignore local items

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /.vs/ProjectEvaluation
 /.vs/ValidParenthesesChallenge/DesignTimeBuild
 /.vs/ValidParenthesesChallenge/v17
+/ValidParenthesesChallengeTestCases/bin/Debug/net8.0
+/ValidParenthesesChallengeTestCases/obj/Debug/net8.0
+/ValidParenthesesChallengeTestCases/obj/Release/net8.0
+/ValidParenthesesChallengeTestCases/obj
+/.vs
